...
                    self.player.play()
                }){
                    Image(systemName: "play.fill")
                        .resizable()
                        .frame(width: 17, height: 17, alignment: Alignment.center)
                }
                .accessibility(identifier: "play_button")
            } else {
                Button(action: {
                    self.player.pause()
                }){
                    Image(systemName: "pause.fill")
                        .resizable()
                        .frame(width: 17, height: 17, alignment: Alignment.center)
                }
                .accessibility(identifier: "pause_button")
            }
            
            Button(action: {
                player.switchToNextSong()
            }){
                Image(systemName: "forward.fill")
...
